# ur_kinematics

./: 01_forward_inverse.py  CMakeLists.txt  README.md  package.xml  setup.py
src/ur_kinematics_utils/: kinematics.py
