<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>ur_kinematics_utils</name>
  <version>1.0.0</version>
  <description>Universal robots kinematics utils.</description>
  <author>Kirsty Ellis</author>
  <maintainer email="kirsty.ellis@mila.quebec">K. Ellis, Mila</maintainer>
  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>
 
  <export>
  </export>
</package>
